# TestHookApi

./: gradle.properties
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/xiaolu123/testhookapi/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: deviceinfo.json
app/src/main/java/xiaolu123/testhookapi/: DeviceInfo.java  DeviceInfoManager.java  DeviceKey.java  DeviceUtil.java  HookTool.java  Main.java  MainActivity.java
app/src/main/jni/: CMakeLists.txt  main.c  mainactivity.c  test-hook.cpp
app/src/main/res/layout/: activity_main.xml
app/src/test/java/xiaolu123/testhookapi/: ExampleUnitTest.java
appium/: build.gradle
appium/src/main/java/: Main.java
appium/src/main/java/autotest/: AdbDevice.java  AndroidKeyCode.java  TestException.java  XuImage.java
appium/src/main/java/autotest/element/: Element.java  ElementAttribs.java  Position.java  UiDump.java  UiDumpService.java
appium/src/main/java/autotest/utils/: DataUtils.java  FileUtils.java  HttpUtils.java  ImageUtils.java  MonkeyScriptUtils.java  PackageUtils.java  ReUtils.java  ShellUtils.java
appium/src/main/java/bean/: DeviceBean.java  MockTask.java
appium/src/main/java/business/: DateTaskQueue.java  DeviceManager.java  MockAppBusiness.java  TaskManager.java
